--- a/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
+++ b/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
@@ -15,6 +15,28 @@ phases:
   phaseSteps:
   - type: PREPARE_STEPS
     name: Prepare Steps
+    steps:
+    - type: SHELL_SCRIPT
+      name: Shell Script
+      properties:
+        commandPath: null
+        connectionAttributes: null
+        connectionType: SSH
+        delegateSelectors:
+        - mf.da
+        executeOnDelegate: true
+        host: null
+        outputVars: envOut
+        publishAsVar: false
+        scriptString: java -version
+        scriptType: BASH
+        secretOutputVars: ''
+        sshKeyRef: null
+        sweepingOutputName: null
+        sweepingOutputScope: null
+        templateExpressions: null
+        templateVariables: ''
+        timeoutMillis: 60000
     stepsInParallel: false
   - type: COLLECT_ARTIFACT
     name: Collect Artifact
