--- a/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
+++ b/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
@@ -21,21 +21,21 @@ phases:
       properties:
         commandPath: null
         connectionAttributes: null
-        connectionType: SSH
         delegateSelectors:
         - mf.da
         executeOnDelegate: true
         host: null
-        outputVars: envOut
+        outputVars: ''
         publishAsVar: false
         scriptString: java -version
         scriptType: BASH
-        secretOutputVars: ''
         sshKeyRef: null
         sweepingOutputName: null
         sweepingOutputScope: null
         templateExpressions: null
-        templateVariables: ''
+        templateUuid: null
+        templateVariables: null
+        templateVersion: null
         timeoutMillis: 60000
     stepsInParallel: false
   - type: COLLECT_ARTIFACT
