Harness IO Git Sync. MODIFY: Setup/Applications/App-Test/Workflows/Workflow-1.yaml

--- a/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
+++ b/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
@@ -27,7 +27,10 @@ phases:
         host: null
         outputVars: ''
         publishAsVar: false
-        scriptString: java -version
+        scriptString: |-
+          java -version
+          hostname
+          ip addr
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
