Harness IO Git Sync. MODIFY: Setup/Applications/App-Test/Workflows/Workflow-1.yaml

--- a/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
+++ b/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
@@ -28,7 +28,7 @@ phases:
         outputVars: ''
         publishAsVar: false
         scriptString: |-
-          java --version
+          ps -fea | grep da
           hostname
           hostname -I
         scriptType: BASH
