Harness IO Git Sync. MODIFY: Setup/Applications/App-Test/Workflows/Workflow-1.yaml

--- a/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
+++ b/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
@@ -28,9 +28,9 @@ phases:
         outputVars: ''
         publishAsVar: false
         scriptString: |-
-          ps -fea | grep da
           hostname
           hostname -I
+          pwd
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
