Harness IO Git Sync. MODIFY: Setup/Applications/App-Test/Workflows/Workflow-1.yaml

--- a/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
+++ b/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
@@ -31,6 +31,9 @@ phases:
           hostname
           hostname -I
           pwd
+          cd /root/
+          java -version
+          pwd
         scriptType: BASH
         sshKeyRef: null
         sweepingOutputName: null
