--- a/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
+++ b/Setup/Applications/App-Test/Workflows/Workflow-1.yaml
@@ -31,7 +31,7 @@ phases:
           hostname
           hostname -I
           pwd
-          cd /root/
+          cd /home/gnp/
           java -version
           pwd
         scriptType: BASH
